--- a/ackoo-partner-crawler/package.json
+++ b/ackoo-partner-crawler/package.json
@@ -4,12 +4,19 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint src --fix"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "mongoose": "^6.1.8",
     "node-fetch": "^2.6.7"
+  },
+  "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.2.0"
   }
 }
