--- a/ackoo-partner-crawler/package.json
+++ b/ackoo-partner-crawler/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "algoliasearch": "^4.12.1",
+    "lodash": "^4.17.21",
     "mongoose": "^6.1.8",
     "node-fetch": "^2.6.7"
   },
